# rebrew

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  agent_local.yml  audit_phase1.md  audit_phase2.md  pyproject.toml
agent-skills/rebrew-data-analysis/: SKILL.md
agent-skills/rebrew-matching/: SKILL.md
agent-skills/rebrew-status-tracking/: SKILL.md
agent-skills/rebrew-sync/: SKILL.md
agent-skills/rebrew-workflow/: SKILL.md
docs/: AGENT_PRD.md  AI_RAG_PRD.md  ANGR_PROPOSAL.md  ANNOTATIONS.md  BINSYNC_INTEGRATION.md  BOOTSTRAPPING.md  CLI.md  CONFIG.md  DB_FORMAT.md  DESIGN_PRINCIPLES.md  FLIRT_SIGNATURES.md  GA_MODEL_TRAINING.md  GA_MUTATIONS.md  GHIDRA_SYNC.md  IDEAS.md  MATCH_TYPES.md  ML_TRAINING.md  NAME_NORMALIZATION.md  PRINCIPLES.md  README.md  TOOLCHAIN.md  TOOLS.md  USER_STORIES.md  WORKFLOW.md  ideas.md  metadata_format.md
recoverage/: DESIGN.md  app.js  build_db.py  coverage.db  data.json  dev_server.py  potato.py  run.sh  server_functions.csv  style.css
scripts/: find_strings.py  map_crt_sizes.py
src/rebrew/: AGENTS.md.template  PRINCIPLES.md  __init__.py  annotation.py  asm.py  batch.py  batch_extract.py  binary_loader.py  binsync_export.py  build_db.py  builddb.py  c_parser.py  cache_cli.py  catalog.py  cfg.py  cli.py  compile.py  compile_cache.py  config.py  crt_match.py  cu_map.py  data.py  data_metadata.py  data_sidecar.py  decompiler.py  depgraph.py  dict_mixin.py  diff.py  doctor.py  dump_asm.py  extract.py  extract_target.py  flirt.py  ga.py  ga_batch.py  gen_flirt_pat.py  gen_skeleton.py  ghidra_sync.py  identify_libs.py  init.py  (+32 more)
src/rebrew/agent-skills/rebrew-data-analysis/: SKILL.md
src/rebrew/agent-skills/rebrew-ghidra-sync/: SKILL.md
src/rebrew/agent-skills/rebrew-intake/: SKILL.md
src/rebrew/agent-skills/rebrew-matching/: SKILL.md
src/rebrew/agent-skills/rebrew-workflow/: SKILL.md
src/rebrew/agent-skills/rebrew-workflow/references/: annotation-format.md
src/rebrew/catalog/: AGENTS.md  __init__.py  cli.py  export.py  grid.py  loaders.py  models.py  registry.py  sections.py
src/rebrew/core/: __init__.py  matching.py  toolchain.py
src/rebrew/ghidra/: __init__.py  cli.py  client.py  commands.py  models.py
src/rebrew/matcher/: AGENTS.md  __init__.py  ast_engine.py  compiler.py  core.py  flag_data.py  flags.py  mutator.py  mutator_ast.py  parsers.py  scoring.py
tests/: test_annotation.py  test_annotation_cov.py  test_annotation_roundtrip.py  test_asm.py  test_asm_cov.py  test_ast_engine.py  test_audit_edge_cases.py  test_batch.py  test_batch_cov.py  test_binary_loader.py  test_binsync_export.py  test_build_db.py  test_catalog.py  test_catalog_cov.py  test_cfg.py  test_classify_blockers.py  test_cli.py  test_compile.py  test_compile_cache.py  test_compile_cov.py  test_config.py  test_core.py  test_crt_match.py  test_cu_map.py  test_data.py  test_data_annotations.py  test_data_metadata.py  test_data_sidecar.py  test_decompiler.py  test_depgraph.py  test_dispatch_table.py  test_doctor.py  test_flirt.py  test_flirt_cov.py  test_ga.py  test_ga_cov.py  test_gen_flirt_pat.py  test_gen_flirt_pat_cov.py  test_guardrails.py  test_ideas_14_15.py  (+52 more)
tools/: sync_decomp_flags.py
