[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrew"
version = "0.1.0"
description = "Compiler-in-the-loop decompilation workbench for binary-matching game reversing"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.0",
    "diskcache>=5.6",
    "jinja2>=3.1",
    "lief>=0.17.4",
    "numpy>=1.26",
    "pycparser>=2.21",
    "python-flirt>=0.9.10",
    "pyyaml>=6.0",
    "reccmp",
    "rich>=13.0",
    "tomlkit>=0.12",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "slipcover>=1.0.17",
]
ghidra = [
    "httpx>=0.28",
]

[project.scripts]
rebrew = "rebrew.main:main"
rebrew-rename = "rebrew.rename:main_entry"
rebrew-test = "rebrew.test:main_entry"
rebrew-verify = "rebrew.verify:main_entry"
rebrew-next = "rebrew.next:main_entry"
rebrew-skeleton = "rebrew.skeleton:main_entry"
rebrew-catalog = "rebrew.catalog:main_entry"
rebrew-sync = "rebrew.sync:main_entry"
rebrew-lint = "rebrew.lint:main_entry"
rebrew-extract = "rebrew.extract:main_entry"
rebrew-match = "rebrew.match:main_entry"
rebrew-ga = "rebrew.ga:main_entry"
rebrew-asm = "rebrew.asm:main_entry"
rebrew-build-db = "rebrew.build_db:main_entry"
rebrew-init = "rebrew.init:main_entry"
rebrew-nasm = "rebrew.nasm:main_entry"
rebrew-flirt = "rebrew.flirt:main_entry"

rebrew-cache = "rebrew.cache_cli:main_entry"
rebrew-cfg = "rebrew.cfg:main_entry"
rebrew-status = "rebrew.status:main_entry"
rebrew-data = "rebrew.data:main_entry"
rebrew-graph = "rebrew.depgraph:main_entry"
rebrew-promote = "rebrew.promote:main_entry"
rebrew-triage = "rebrew.triage:main_entry"
rebrew-doctor = "rebrew.doctor:main_entry"

[tool.setuptools.package-data]
rebrew = ["agent-skills/**/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.slipcover]
source = ["src/rebrew"]
# Run: uv run python -m slipcover -m pytest
# Or for JSON output: uv run python -m slipcover --json cov.json -m pytest

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
# Re-export packages expose public API via __init__.py — redundant aliases
# are the canonical way to silence F401 for intentional re-exports, but we
# keep the suppression as a safety net for any future additions.
# (All current re-exports use explicit `X as X` aliases.)

[tool.uv]
package = true

[tool.uv.sources]
reccmp = { git = "https://github.com/isledecomp/reccmp.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "slipcover>=1.0.17",
    "ruff>=0.3",
    "pre-commit>=4.5.1",
]
