[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebrew"
version = "0.1.0"
description = "Compiler-in-the-loop decompilation workbench for binary-matching game reversing"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.0",
    "diskcache>=5.6",
    "httpx>=0.28",
    "jinja2>=3.1",
    "lief>=0.17.4",
    "numpy>=1.26",
    "pycparser>=2.21",
    "python-flirt>=0.9.10",
    "pyyaml>=6.0",
    "reccmp",
    "rich>=13.0",
    "tomlkit>=0.12",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "slipcover>=1.0.17",
]
prove = [
    "angr>=9.2",
]

[project.scripts]
rebrew = "rebrew.main:main"

[tool.setuptools.package-data]
rebrew = ["agent-skills/**/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # LIEF C extension emits this when parsing minimal Mach-O stubs with zeroed headers
    "ignore:0 is not a valid CPU_TYPE:RuntimeWarning",
]

[tool.slipcover]
source = ["src/rebrew"]
# Run: uv run python -m slipcover -m pytest
# Or for JSON output: uv run python -m slipcover --json cov.json -m pytest

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
# Re-export packages expose public API via __init__.py — redundant aliases
# are the canonical way to silence F401 for intentional re-exports, but we
# keep the suppression as a safety net for any future additions.
# (All current re-exports use explicit `X as X` aliases.)

[tool.uv]
package = true

[tool.uv.sources]
reccmp = { git = "https://github.com/isledecomp/reccmp.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "slipcover>=1.0.17",
    "ruff>=0.3",
    "pre-commit>=4.5.1",
]
